# noteshrink-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: arg.rs  kmeans_f.rs  load.rs  main.rs  processing.rs  save.rs  types.rs  vq.rs
