[package]
name = "noteshrink-rs"
version = "0.1.0"
authors = ["Oussama Moutaoikil <m.oussama@proton.me>"]
description = "Convert handwritten notes to beautiful, compact PDFs."
repository = "https://github.com/SingularHomology/noteshrink-rs.git"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
ndarray = "0.16.1"
nshare = "0.10.0"
image = "0.25.6"
rand = "0.9.1"
clap = { version = "4.5.37", features = ["derive"] }
kmeans = "1.1.0"
indicatif = "0.17.11"
colored = "3.0.0"
